--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
   <!-- /svg -->
   <!-------- HEADER -------->
   <header id="header" class="header">
+    <div class="logo__img clip-js2 top">
+      <a href="http://riv-round.com/">
+        <img class="logo" src="/images/riv_logo.png" alt="">
+      </a>
+    </div>
     <!-- .mobile-container -->
     <div class="mobile-container clip-js2 top">
-      <div class="logo__img">
-        <a href="http://riv-round.com/">
-          <img class="logo" src="/images/riv_logo.png" alt="">
-        </a>
-      </div>
       <div class="mobile-button">
         <button class="mobile-menu__btn">
           <span></span>
