opening-pace.js

--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@
     </div>
     <!------ /.mobile-menu ----->
   </div>
+  <script src="/scripts/vendor/pace.js"></script>
   <script src="/scripts/vendor/vivus.min.js"></script>
   <script src="/scripts/libs/svg-animation.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.5.1/dist/simpleParallax.min.js"></script>
