--- a/company/company.html
+++ b/company/company.html
@@ -123,13 +123,9 @@
       <nav class="footer__nav">
         <ul>
           <li><a href="http://riv-round.com/">HOME</a></li>
+          <li><a class="rule-link" href="http://riv-round.com/company/rule">利用規約</a></li>
         </ul>
       </nav>
-      <!-- <div class="back-btn">
-        <a class="back-btn__link" href="#header">
-          <p>TOP</p>
-        </a>
-      </div> -->
       <div class="footer__logo">
         <img src="/images/riv_logo_02.png" alt="">
       </div>
