--- a/index.html
+++ b/index.html
@@ -261,14 +261,15 @@
     </div>
     <!-------- /#MAIN-CONTENTS -------->
     <!-------- FOOTER -------->
-    <footer id="footer" class="footer appear up">
-      <div class="footer__inner item">
+    <footer id="footer" class="footer">
+      <div class="footer__inner">
         <nav class="footer__nav">
           <ul>
             <li><a href="http://riv-round.com/company/company">COMPANY</a></li>
             <li><a data-scrolls href="#value">VALUE</a></li>
             <li><a href="#concept">CONCEPT</a></li>
             <li><a href="#price">PRICE</a></li>
+            <li><a class="rule-link" href="http://riv-round.com/company/rule">利用規約</a></li>
           </ul>
         </nav>
         <!-- <div class="back-btn">
@@ -316,7 +317,7 @@
   <script src="/scripts/vendor/pace.js"></script>
   <script src="/scripts/vendor/vivus.min.js"></script>
   <script src="/scripts/libs/svg-animation.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/simple-parallax-js@5.5.1/dist/simpleParallax.min.js"></script>
+  <script src="/scripts/vendor/simpleParallax.min.js"></script>
   <script src="/scripts/vendor/smooth-scroll.min.js"></script>
   <script src="/scripts/libs/mobile-menu.js"></script>
   <script src="/scripts/libs/scroll.js"></script>
