--- a/company/company.html
+++ b/company/company.html
@@ -2,6 +2,18 @@
 <html lang="ja">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3KCX8PZD11"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-3KCX8PZD11');
+  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>会社情報 | RivRound</title>
@@ -10,7 +22,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;500&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../styles/vendor/bootstrap-reboot.css">
   <link rel="stylesheet" href="../styles/style.css">
-  <link rel="stylesheet" href="company.css">
 </head>
 
 <body>
@@ -31,14 +42,11 @@
         </button>
       </div>
     </div>
-    <!-- .pc-container -->
     <div class="pc-container">
       <div class="pc-header">
         <ul class="pc-header__list">
-          <li class="pc-header__item"><a href="/index.html">VALUE</a></li>
-          <li class="pc-header__item"><a href="/index.html">SERVICE</a></li>
-          <li class="pc-header__item"><a href="/index.html">PRICE</a></li>
-          <li class="pc-header__item"><a href="/index.html">CONTACT</a></li>
+          <li class="pc-header__item"><a href="http://riv-round.com">TOP</a></li>
+          <li class="pc-header__item"><a href="mailto:info@riv-round.com">CONTACT</a></li>
         </ul>
       </div>
     </div>
@@ -122,7 +130,7 @@
     <div class="footer__inner item">
       <nav class="footer__nav">
         <ul>
-          <li><a href="http://riv-round.com/">HOME</a></li>
+          <li><a href="http://riv-round.com/">TOP</a></li>
           <li><a class="rule-link" href="http://riv-round.com/company/rule">利用規約</a></li>
         </ul>
       </nav>
@@ -135,21 +143,14 @@
     </div>
   </footer>
   <!-------- /#FOOTER -------->
-  <!------ .mobile-menu ------>
   <div class="mobile-menu">
     <nav class="mobile-menu__nav">
       <ul class="mobile-menu__ul">
         <li class="mobile-menu__li">
-          <a href="/index.html">VALUE</a>
+          <a href="http://riv-round.com">TOP</a>
         </li>
         <li class="mobile-menu__li">
-          <a href="/index.html">SERVICE</a>
-        </li>
-        <li class="mobile-menu__li">
-          <a href="/index.html">PRICE</a>
-        </li>
-        <li class="mobile-menu__li">
-          <a href="/index.html">CONTACT</a>
+          <a href="mailto:info@riv-round.com">CONTACT</a>
         </li>
       </ul>
       <address>
