--- a/company/rule.html
+++ b/company/rule.html
@@ -2,6 +2,18 @@
 <html lang="ja">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-3KCX8PZD11"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-3KCX8PZD11');
+  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>利用規約 | RivRound</title>
@@ -31,14 +43,12 @@
         </button>
       </div>
     </div>
-    <!-- .pc-container -->
     <div class="pc-container">
       <div class="pc-header">
         <ul class="pc-header__list">
-          <li class="pc-header__item"><a href="/index.html">VALUE</a></li>
-          <li class="pc-header__item"><a href="/index.html">SERVICE</a></li>
-          <li class="pc-header__item"><a href="/index.html">PRICE</a></li>
-          <li class="pc-header__item"><a href="/index.html">CONTACT</a></li>
+          <li class="pc-header__item"><a href="http://riv-round.com">TOP</a></li>
+          <li class="pc-header__item"><a href="mailto:info@riv-round.com">CONTACT</a></li>
+
         </ul>
       </div>
     </div>
@@ -458,14 +468,9 @@
     <div class="footer__inner">
       <nav class="footer__nav">
         <ul>
-          <li><a href="http://riv-round.com/">HOME</a></li>
+          <li><a href="http://riv-round.com/">TOP</a></li>
         </ul>
       </nav>
-      <!-- <div class="back-btn">
-        <a class="back-btn__link" href="#header">
-          <p>TOP</p>
-        </a>
-      </div> -->
       <div class="footer__logo">
         <img src="/images/riv_logo_02.png" alt="">
       </div>
@@ -480,16 +485,13 @@
     <nav class="mobile-menu__nav">
       <ul class="mobile-menu__ul">
         <li class="mobile-menu__li">
-          <a href="/index.html">VALUE</a>
+          <a href="http://riv-round.com">TOP</a>
         </li>
         <li class="mobile-menu__li">
-          <a href="/index.html">SERVICE</a>
+          <a href="mailto:info@riv-round.com">CONTACT</a>
         </li>
         <li class="mobile-menu__li">
-          <a href="/index.html">PRICE</a>
-        </li>
-        <li class="mobile-menu__li">
-          <a href="/index.html">CONTACT</a>
+          <a href="http://riv-round.com/company/company">CAMPANY</a>
         </li>
       </ul>
       <address>
